src/objects/SalesInvoice__c.object
<CustomObject>
    <fields>
        <fullName>Amount__c</fullName>
        <label>Amount</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Customer__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>SalesInvoice</relationshipLabel>
        <relationshipName>SalesInvoice</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Quantity__c</fullName>
        <label>Quantity</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ShippingCity__c</fullName>
        <label>Shipping City</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShippingCountry__c</fullName>
        <label>Shipping Country</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShippingPostalCode__c</fullName>
        <label>Shipping Postal Code</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>ShippingStreet__c</fullName>
        <label>Shipping Street</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Ready to Send</fullName>
                </value>
                <value>
                    <fullName>Sent</fullName>
                </value>
                <value>
                    <fullName>Confirmed</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Sales Invoice</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <displayFormat>SI-{0000}</displayFormat>
        <label>Sales Invoice Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>SalesInvoices</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>